fix(liga/schedule): Icon align fix

--- a/packages/shared/assets/css/components/game-item.css
+++ b/packages/shared/assets/css/components/game-item.css
@@ -20,6 +20,11 @@
       aspect-ratio: 1;
     }
 
+    svg {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
     .game-result {
       color: var(--mvw-text-highlighted);
 
